# TunNetCom-AionTime

./: .editorconfig  ClassDiagram.drawio  Directory.Build.props  GlobalClassDiagram.drawio  GlobalUseCaseDiagram.drawio  README.md  StyleCop.ruleset  TunNetCom-AionTime.sln  Untitled Diagram.drawio  dashboard.yml  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml  grafana.ini  jaeger-ui.json  launchSettings.json
.github/workflows/: AionTimeWorkFlow.yml  Analyzer.yml  main.yml  (+1 more)
Diagrammes/: Diagramme sans nom.drawio  GlobalClassDiagram.drawio  Logic_Architecture.drawio
DockerConfigs/: datasource.yml  dotnet-otel-dashboard.json  logs-dashbords.json  prometheus.yml
TunNetCom-AionTime-Azure.API/: TunNetCom-AionTime-Azure.API.csproj  TunNetCom-AionTime-Azure.API.http
TunNetCom.AionTime.Budget.API/: TunNetCom.AionTime.Budget.API.http
diagrams/: GlobalClassDiagram.drawio  GlobalUseCaseDiagram.drawio  Logic_Architecture.drawio
src/: .editorconfig
src/AzureDevopsAgentService/: .env.example  README.md  pyproject.toml
src/AzureDevopsAgentService/src/: main.py
src/AzureDevopsAgentService/src/api/: schemas.py
src/AzureDevopsAgentService/src/api/routers/: chat.py
src/AzureDevopsAgentService/src/application/: prompts.py
src/AzureDevopsAgentService/src/application/graph/: definition.py
src/AzureDevopsAgentService/src/application/interfaces/: i_llm.py
src/AzureDevopsAgentService/src/application/services/: agent_service.py
src/AzureDevopsAgentService/src/core/: config.py  limiter.py
src/AzureDevopsAgentService/src/infrastructure/llm/: clients.py  configuration.py
src/AzureDevopsAgentService/src/infrastructure/tools/: azureDevops.py  tavily.py
src/AzureDevopsAgentService/src/static/: index.html
(+927 files in other folders)
